Require Zope 4.0a3 as minimun supported Zope version.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,13 +1,19 @@
 [buildout]
-parts = interpreter test
+extends =
+    https://zopefoundation.github.io/Zope/releases/4.0a3/versions-prod.cfg
+parts =
+    zopepy
+    test
 develop = .
 unzip = true
 
-[interpreter]
+[zopepy]
 recipe = zc.recipe.egg
 interpreter = python
 eggs =
     Products.PluginRegistry
+interpreter = zopepy
+scripts = zopepy
 
 [test]
 recipe = zc.recipe.testrunner
