--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,11 +1,20 @@
 [buildout]
+extensions = mr.developer
 extends =
-    http://zopefoundation.github.io/Zope/releases/4.0b3/versions-prod.cfg
+    http://zopefoundation.github.io/Zope/releases/master/versions-prod.cfg
 parts =
     zopepy
     test
 develop = .
 unzip = true
+auto-checkout = *
+
+[remotes]
+github = git://github.com/zopefoundation
+github_push = git@github.com:zopefoundation
+
+[sources]
+Products.GenericSetup = git ${remotes:github}/Products.GenericSetup.git pushurl=${remotes:github_push}/Products.GenericSetup.git branch=davisagli-py3-extension-2
 
 [zopepy]
 recipe = zc.recipe.egg
