- start on Python 3 support and update package scaffolding

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,9 +1,10 @@
 [buildout]
 extends =
-    http://zopefoundation.github.io/Zope/releases/4.0b3/versions-prod.cfg
+    http://zopefoundation.github.io/Zope/releases/master/versions-prod.cfg
 parts =
     zopepy
     test
+    tox
 develop = .
 unzip = true
 
@@ -19,3 +20,7 @@ scripts = zopepy
 recipe = zc.recipe.testrunner
 eggs =
     Products.PluginRegistry
+
+[tox]
+recipe = zc.recipe.egg
+eggs = tox
