--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,24 @@
 sudo: false
-dist: trusty
 language: python
+cache:
+    directories:
+        - $TRAVIS_BUILD_DIR/eggs
 python:
   - "2.7"
+  - "3.5"
+  - "3.6"
 install:
+    - pip install -U coverage coveralls
+    - pip install -U six==$(curl $(awk '$1 ==  "extends" {print $3}' buildout.cfg) 2>/dev/null | awk '$1 == "six" {print $3}')
     - python bootstrap.py
     - bin/buildout
 script:
-    - bin/test -pvc
+    - coverage run bin/test -vvc
+after_success:
+    - coveralls
 notifications:
     email: tseaver@palladion.com
+cache:
+    - pip: true
+    - directories:
+      - eggs/
