Do not fail the flake8 environment if buildout was not run beforehand.

--- a/tox.ini
+++ b/tox.ini
@@ -41,6 +41,6 @@ deps =
     flake8-debugger
 
 commands =
-    - flake8 --format=html --htmldir={toxinidir}/parts/flake8 --doctests Products tests setup.py {posargs}
+    - flake8 --format=html --htmldir={toxinidir}/flake8 --doctests Products tests setup.py {posargs}
     flake8 --doctests Products tests setup.py {posargs}
 
