--- a/tox.ini
+++ b/tox.ini
@@ -29,9 +29,9 @@ setenv =
 commands =
     coverage erase
     coverage combine
-    coverage html
-    coverage xml
-    coverage report
+    coverage html -i
+    coverage xml -i
+    coverage report -i --fail-under=90
 
 [testenv:flake8]
 basepython = python3.6
