--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,37 @@
-sudo: false
 language: python
-cache:
-    directories:
-        - $TRAVIS_BUILD_DIR/eggs
-python:
-  - "2.7"
-  - "3.5"
-  - "3.6"
+
 matrix:
     include:
+        - python: "3.6"
+          env: TOXENV=lint
+        - python: "3.6"
+          env: TOXENV=coverage
+          after_success:
+              - coveralls
+        - python: "2.7"
+          env: TOXENV=py27
+        - python: "3.5"
+          env: TOXENV=py35
+        - python: "3.6"
+          env: TOXENV=py36
         - python: "3.7"
+          env: TOXENV=py37
           dist: xenial
         - python: "3.8-dev"
+          env: TOXENV=py38
           dist: xenial
+
 install:
-    - pip install -U coverage coveralls
-    - python bootstrap.py
-    - bin/buildout
+    - travis_retry pip install -U pip setuptools
+    - travis_retry pip install -U tox coverage coveralls
+
 script:
-    - coverage run bin/test -vvc
-after_success:
-    - coveralls
+    - travis_retry tox
+
 notifications:
     email: tseaver@palladion.com
+
 cache:
-    - pip: true
-    - directories:
-      - eggs/
+  pip: true
+  directories:
+    - eggs/
