--- a/tox.ini
+++ b/tox.ini
@@ -1,48 +1,61 @@
 [tox]
-minversion = 1.9
 envlist =
    py27,
    py35,
    py36,
    py37,
    py38,
-   flake8,
+   lint,
    coverage,
 
 [testenv]
 commands =
-    {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} buildout:sources-dir={toxinidir}/src bootstrap
-    {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} buildout:sources-dir={toxinidir}/src install test
-    coverage run {envbindir}/test {posargs}
-
-skip_install = true
+    {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} bootstrap
+    {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
+    {envbindir}/test {posargs}
 deps =
     zc.buildout
-    coverage
-
-setenv =
-    COVERAGE_FILE=.coverage.{envname}
+skip_install = true
 
 [testenv:coverage]
 basepython = python3.6
-deps = coverage
-setenv =
-    COVERAGE_FILE=.coverage
 commands =
-    coverage erase
-    coverage combine
-    coverage html -i
-    coverage xml -i
-    coverage report -i --fail-under=90
-
-[testenv:flake8]
-basepython = python3.6
+    {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} bootstrap
+    {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
+    coverage erase --rcfile={toxinidir}/setup.cfg
+    coverage run --rcfile={toxinidir}/setup.cfg {envbindir}/test -q
+    coverage report --rcfile={toxinidir}/setup.cfg
+    coverage html -i --rcfile={toxinidir}/setup.cfg
+    coverage xml -i --rcfile={toxinidir}/setup.cfg
 deps =
-    flake8
-    flake8-html
-    flake8-debugger
+    {[testenv]deps}
+    coverage
+setenv =
+    COVERAGE_FILE={toxinidir}/.coverage
 
+[testenv:lint]
+basepython = python3.6
+commands_pre =
+    mkdir -p {toxinidir}/parts/flake8
 commands =
-    - flake8 --format=html --htmldir={toxinidir}/flake8 --doctests Products tests setup.py {posargs}
+    isort --check-only --diff --recursive {toxinidir}/Products setup.py
+    - flake8 --format=html Products tests setup.py {posargs}
     flake8 --doctests Products tests setup.py {posargs}
-
+deps =
+    isort
+    flake8
+    # helper to generate HTML reports:
+    flake8-html
+    # Useful flake8 plugins that are Python and Plone specific:
+    flake8-coding
+    flake8-debugger
+    flake8-deprecated
+    flake8-todo
+    flake8-isort
+    mccabe
+    flake8-blind-except
+    flake8-commas
+    flake8-string-format
+    flake8-quotes
+whitelist_externals =
+    mkdir
