- enable the tests to run at all

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,12 @@
 [buildout]
+extends =
+    https://zopefoundation.github.io/Zope/releases/2.13.29/versions-prod.cfg
 parts = interpreter test
 develop = .
-unzip = true
+
+[versions]
+setuptools =
+zc.buildout =
 
 [interpreter]
 recipe = zc.recipe.egg
