--- a/tox.ini
+++ b/tox.ini
@@ -39,8 +39,8 @@ commands_pre =
     mkdir -p {toxinidir}/parts/flake8
 commands =
     isort --check-only --diff --recursive {toxinidir}/Products setup.py
-    - flake8 --format=html Products tests setup.py {posargs}
-    flake8 --doctests Products tests setup.py {posargs}
+    - flake8 --format=html Products setup.py {posargs}
+    flake8 --doctests Products setup.py {posargs}
 deps =
     isort
     flake8
