- change package structure to move package code into a ``src`` subfolder

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,11 @@
-recursive-include Products *
-include *txt *rst
-global-exclude *.pyc
+include *.rst
+include *.txt
+include buildout.cfg
+include tox.ini
+
+recursive-include src *.py
+recursive-include src *.txt
+recursive-include src *.zcml
+recursive-include src *.gif
+recursive-include src *.png
+recursive-include src *.zpt
