--- a/setup.cfg
+++ b/setup.cfg
@@ -19,8 +19,6 @@ known_zope = AccessControl, Acquisition, App, OFS, Products, Shared, Zope2
 default_section = ZOPE
 line_length = 79
 lines_after_imports = 2
-not_skip =
-    __init__.py
 
 [flake8]
 no-accept-encodings = True
@@ -31,7 +29,7 @@ htmldir = parts/flake8
 
 [coverage:run]
 branch = True
-source = Products
+source = Products.PluginRegistry
 omit =
 
 [coverage:report]
