--- a/tox.ini
+++ b/tox.ini
@@ -38,9 +38,9 @@ basepython = python3.6
 commands_pre =
     mkdir -p {toxinidir}/parts/flake8
 commands =
-    isort --check-only --diff --recursive {toxinidir}/Products setup.py
-    - flake8 --format=html Products setup.py {posargs}
-    flake8 --doctests Products setup.py {posargs}
+    isort --check-only --diff {toxinidir}/src setup.py
+    - flake8 --format=html src setup.py {posargs}
+    flake8 --doctests src setup.py {posargs}
 deps =
     isort
     flake8
