--- a/setup.cfg
+++ b/setup.cfg
@@ -1,43 +1,25 @@
-[zest.releaser]
-create-wheel = yes
-
+# Generated from:
+# https://github.com/zopefoundation/meta/tree/master/config/zope-product
 [bdist_wheel]
-universal=1
+universal = 1
+
+[flake8]
+doctests = 1
+no-accept-encodings = True
+htmldir = parts/flake8
 
 [check-manifest]
 ignore =
-    coverage.xml
-    tox.ini
-    .travis.yml
+    .editorconfig
+    .meta.toml
 
 [isort]
 force_single_line = True
 combine_as_imports = True
 sections = FUTURE,STDLIB,THIRDPARTY,ZOPE,FIRSTPARTY,LOCALFOLDER
-known_third_party = six
-known_zope = AccessControl, Acquisition, App, OFS, Products, Shared, Zope2
+known_third_party = six, docutils, pkg_resources
+known_zope = 
+known_first_party = 
 default_section = ZOPE
 line_length = 79
 lines_after_imports = 2
-
-[flake8]
-no-accept-encodings = True
-doctests = True
-exclude =
-    bootstrap.py
-htmldir = parts/flake8
-
-[coverage:run]
-branch = True
-source = Products.PluginRegistry
-omit =
-
-[coverage:report]
-fail_under = 90.00
-ignore_errors = True
-precision = 2
-show_missing = False
-sort = Name
-
-[coverage:html]
-directory = parts/coverage
