--- a/tox.ini
+++ b/tox.ini
@@ -1,61 +1,91 @@
+# Generated from:
+# https://github.com/zopefoundation/meta/tree/master/config/zope-product
 [tox]
+minversion = 3.18
 envlist =
-   py27,
-   py35,
-   py36,
-   py37,
-   py38,
-   lint,
-   coverage,
+    lint
+    py27
+    py35
+    py36
+    py37
+    py38
+    py39
+    coverage
 
 [testenv]
-commands =
-    {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} bootstrap
-    {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
-    {envbindir}/test {posargs}
-deps =
-    zc.buildout
 skip_install = true
-
-[testenv:coverage]
-basepython = python3.6
-commands =
-    {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} bootstrap
-    {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
-    coverage erase --rcfile={toxinidir}/setup.cfg
-    coverage run --rcfile={toxinidir}/setup.cfg {envbindir}/test -q
-    coverage report --rcfile={toxinidir}/setup.cfg
-    coverage html -i --rcfile={toxinidir}/setup.cfg
-    coverage xml -i --rcfile={toxinidir}/setup.cfg
+# We need to pin setuptools until we have zc.buildout 3.0.
 deps =
-    {[testenv]deps}
-    coverage
-setenv =
-    COVERAGE_FILE={toxinidir}/.coverage
+    setuptools < 52
+    zc.buildout
+commands_pre =
+    py27,py35: {envbindir}/buildout -nc {toxinidir}/buildout4.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
+    !py27-!py35: {envbindir}/buildout -nc {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
+commands =
+    {envbindir}/test {posargs:-cv}
 
 [testenv:lint]
-basepython = python3.6
+basepython = python3
 commands_pre =
     mkdir -p {toxinidir}/parts/flake8
+allowlist_externals =
+    mkdir
 commands =
-    isort --check-only --diff {toxinidir}/src setup.py
-    - flake8 --format=html src setup.py {posargs}
-    flake8 --doctests src setup.py {posargs}
+    isort --check-only --diff {toxinidir}/src {toxinidir}/setup.py
+    - flake8 --format=html {toxinidir}/src {toxinidir}/setup.py
+    flake8 {toxinidir}/src {toxinidir}/setup.py
+    check-manifest
+    check-python-versions
 deps =
-    isort
+    check-manifest
+    check-python-versions
     flake8
+    isort
     # helper to generate HTML reports:
     flake8-html
     # Useful flake8 plugins that are Python and Plone specific:
     flake8-coding
     flake8-debugger
-    flake8-deprecated
-    flake8-todo
-    flake8-isort
     mccabe
-    flake8-blind-except
-    flake8-commas
-    flake8-string-format
-    flake8-quotes
-whitelist_externals =
+
+[testenv:isort-apply]
+basepython = python3
+commands_pre =
+deps =
+    isort
+commands =
+    isort {toxinidir}/src {toxinidir}/setup.py []
+
+[testenv:coverage]
+basepython = python3
+skip_install = true
+allowlist_externals =
     mkdir
+deps =
+    {[testenv]deps}
+    coverage
+    coverage-python-version
+commands =
+    mkdir -p {toxinidir}/parts/htmlcov
+    coverage run {envbindir}/test {posargs:-cv}
+    coverage html
+    coverage report -m --fail-under=90
+
+[coverage:run]
+branch = True
+plugins = coverage_python_version
+source = src
+
+[coverage:report]
+precision = 2
+exclude_lines =
+    pragma: no cover
+    pragma: nocover
+    except ImportError:
+    raise NotImplementedError
+    if __name__ == '__main__':
+    self.fail
+    raise AssertionError
+
+[coverage:html]
+directory = parts/htmlcov
