--- a/.meta.toml
+++ b/.meta.toml
@@ -2,14 +2,14 @@
 # https://github.com/zopefoundation/meta/tree/master/config/zope-product
 [meta]
 template = "zope-product"
-commit-id = "df0f9131de03d8cb33e33b5d816ec384e2f93153"
+commit-id = "5b60e8235223c5c73427d4cdf66be5fb2cce3cea"
 
 [python]
-with-appveyor = false
 with-pypy = false
 with-legacy-python = true
-with-docs = false
 with-sphinx-doctests = false
+with-windows = false
+with-future-python = false
 
 [tox]
 use-flake8 = true
@@ -23,5 +23,6 @@ additional-rules = [
     "recursive-include src *.gif",
     "recursive-include src *.png",
     "recursive-include src *.xml",
+    "recursive-include src *.zcml",
     "recursive-include src *.zpt",
     ]
